<resources>
    <string name="app_name">Virtual-In</string>
    <string name="team_name">WAROK DROID</string>
    <string name="powered_by">Powered by</string>
    <string name="email_input_hint">Type Your  Email…</string>
    <string name="password_input_hint">Type Your Password…</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user">New user?</string>
    <string name="registration_form">Registration Form</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="verify_account">Verify Account</string>
    <string name="verify_account_details">Please send verification code we sent to your email address</string>
    <string name="button_continue">Continue</string>
    <string name="resend">Resend</string>
    <string name="title_home">Home</string>
    <string name="promotion">Promotion</string>
    <string name="profile">Profile</string>
    <string name="point">Point : %s</string>
    <string name="founder">Founder : %s</string>
    <string name="about_this_umkm">About This UMKM</string>
    <string name="my_point">My Point</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="top_points">Top Points</string>
    <string name="my_point_156_000">My Point : 156.000</string>
    <string name="get_cashback">Dapatkan kupon cashback</string>
    <string name="text_info_point">Tukarkan pointmu\ndengan\ncashback, diskon, dan\ngiveaway</string>
    <string name="cashback_produk">Cashback Produk</string>
    <string name="price_old">Rp. %s</string>
    <string name="price_new">Rp. %s</string>
    <string name="point_total">%s Point</string>
    <string-array name="category_id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="category_name">
        <item>Category UMKM 1</item>
        <item>Category UMKM 2</item>
        <item>Category UMKM 3</item>
        <item>Category UMKM 4</item>
        <item>Category UMKM 5</item>
        <item>Category UMKM 6</item>
        <item>Category UMKM 7</item>
        <item>Category UMKM 8</item>
        <item>Category UMKM 9</item>
        <item>Category UMKM 10</item>
    </string-array>
    <string-array name="umkm_name">
        <item>Nama UMKM 1</item>
        <item>Nama UMKM 2</item>
        <item>Nama UMKM 3</item>
        <item>Nama UMKM 4</item>
        <item>Nama UMKM 5</item>
        <item>Nama UMKM 6</item>
        <item>Nama UMKM 7</item>
        <item>Nama UMKM 8</item>
        <item>Nama UMKM 9</item>
        <item>Nama UMKM 10</item>
        <item>Nama UMKM 11</item>
        <item>Nama UMKM 12</item>
        <item>Nama UMKM 13</item>
        <item>Nama UMKM 14</item>
        <item>Nama UMKM 15</item>
        <item>Nama UMKM 16</item>
        <item>Nama UMKM 17</item>
        <item>Nama UMKM 18</item>
        <item>Nama UMKM 19</item>
        <item>Nama UMKM 20</item>
    </string-array>
    <string-array name="umkm_founder_name">
        <item>Nama Founder 1</item>
        <item>Nama Founder 2</item>
        <item>Nama Founder 3</item>
        <item>Nama Founder 4</item>
        <item>Nama Founder 5</item>
        <item>Nama Founder 6</item>
        <item>Nama Founder 7</item>
        <item>Nama Founder 8</item>
        <item>Nama Founder 9</item>
        <item>Nama Founder 10</item>
        <item>Nama Founder 11</item>
        <item>Nama Founder 12</item>
        <item>Nama Founder 13</item>
        <item>Nama Founder 14</item>
        <item>Nama Founder 15</item>
        <item>Nama Founder 16</item>
        <item>Nama Founder 17</item>
        <item>Nama Founder 18</item>
        <item>Nama Founder 19</item>
        <item>Nama Founder 20</item>
    </string-array>
    <string-array name="umkm_rating">
        <item>4.9</item>
        <item>4.1</item>
        <item>4.4</item>
        <item>4.0</item>
        <item>3.5</item>
        <item>4.9</item>
        <item>3.9</item>
        <item>3.1</item>
        <item>2.5</item>
        <item>4.8</item>
        <item>2.0</item>
        <item>2.4</item>
        <item>1.9</item>
        <item>4.3</item>
        <item>4.2</item>
        <item>4.1</item>
        <item>3.2</item>
        <item>3.0</item>
        <item>4.8</item>
        <item>4.3</item>
    </string-array>
</resources>