<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_form"
        android:hint="@string/email_input_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_form"
        android:hint="@string/password_input_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="end"
        android:onClick="onForgotPassword"
        android:text="@string/forgot_password"
        android:textColor="#009432"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/new_user"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onSignUp"
            android:text="@string/sign_up"
            android:textColor="#009432" />

    </LinearLayout>

</LinearLayout>