<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_registration_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/registration_form"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/et_full_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_full_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_form"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/et_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_registration_form"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_form"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_full_name" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_form"
        android:hint="@string/e_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_username" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_form"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/et_repassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <EditText
        android:id="@+id/et_repassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_form"
        android:hint="@string/re_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/btn_create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/bg_button"
        android:text="@string/create_account"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_with_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_repassword" />

    <Button
        android:id="@+id/btn_sign_with_google"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/sign_in_with_google"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_create_account" />

</androidx.constraintlayout.widget.ConstraintLayout>