<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_icon"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:lines="2"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            tools:text="Sepatu Kulit" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_product_price_old"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:lines="1"
                android:layout_marginEnd="8dp"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                tools:text="@string/price_old"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tv_product_price_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:lines="1"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                tools:text="@string/price_new" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_point_total"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_monetization_on_gold_24dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            tools:text="@string/point_total" />

    </LinearLayout>

</LinearLayout>