<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_one"
    tools:context=".activities.MyPointActivity">

    <ImageView
        android:id='@+id/img_arrow_back'
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:src="@drawable/ic_arrow_back_white_24dp"
        app:layout_constraintBottom_toTopOf="@id/tv_get_cashback"
        app:layout_constraintEnd_toStartOf="@id/img_arrow_back"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_my_point"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:gravity="center_vertical"
        android:text="@string/my_point_156_000"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_arrow_back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_get_cashback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/get_cashback"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/ll_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_my_point" />

    <LinearLayout
        android:id="@+id/ll_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/bg_info"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/tv_product_cashback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_get_cashback">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_info_point"
            android:textAlignment="center"
            android:textColor="#009432"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_product_cashback"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/cashback_produk"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/v_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_info" />

    <View
        android:id="@+id/v_line"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/rv_product_cashback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_product_cashback" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_product_cashback"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_line"
        tools:listitem="@layout/product_cashback_item" />

</androidx.constraintlayout.widget.ConstraintLayout>