<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/verify_account_details"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_verify_account" />

    <TextView
        android:id="@+id/tv_verify_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:gravity="center"
        android:text="@string/verify_account"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="84dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintBottom_toTopOf="@id/tv_resend">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_verify_one"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@android:color/white"
                tools:ignore="LabelFor" />

            <View
                android:layout_width="60dp"
                android:layout_height="3dp"
                android:background="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_verify_two"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@android:color/white"
                tools:ignore="LabelFor" />

            <View
                android:layout_width="60dp"
                android:layout_height="3dp"
                android:background="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_verify_three"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@android:color/white"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <View
                android:layout_width="60dp"
                android:layout_height="3dp"
                android:background="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_verify_four"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@android:color/white"
                android:importantForAutofill="no"
                tools:ignore="LabelFor" />

            <View
                android:layout_width="60dp"
                android:layout_height="3dp"
                android:background="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginBottom="97dp"
        android:background="@drawable/bg_button"
        android:text="@string/button_continue"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_resend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:onClick="onResend"
        android:text="@string/resend"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/btn_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>